--- a/tiendaReact/src/componentes/CarritoDetalle/CarritoDetalle.css
+++ b/tiendaReact/src/componentes/CarritoDetalle/CarritoDetalle.css
@@ -1,4 +1,4 @@
-#fondoDetalleArticulo {
+#fondoDetalleCarrito {
     display:flex;
     background-color: rgba(0, 0, 0, 0.5);
     align-content: center;
@@ -10,7 +10,7 @@
     height: 100%;
 }
 
-#popupDetalleArticulo {
+#popupDetalleCarrito{
     display: flex;
     flex-direction: row;
     background-color: #5f5f5f;
@@ -24,39 +24,18 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
-
-#contenedorImg {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#contenedorImg img {
-    max-width: 100%;
-    max-height: 100%;
-    display: block;
-    margin: 0 auto;
-}
-#contenedorInformacion {
+#contenedorInf {
     display: flex;
     flex-direction: column;
-    padding: 20px;
     height: 100%;
 }
-
-#contenedorInformacion h2 {
+#contenedorInf h2 {
     margin: 0;
 }
-
-.articuloCarrito {
+#contenedorArticulos {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    margin: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    flex-direction: column;
+    overflow-y: auto;
+    width: 100%;
+    height: 100%;
 }
