--- a/tiendaReact/src/layouts/productosLayout/productos.css
+++ b/tiendaReact/src/layouts/productosLayout/productos.css
@@ -1,6 +1,7 @@
 #contenedorArticulos {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: inherit;
     justify-content: space-around;
   }
   
